<resources>
    <string name="ABT_APP_WEBSITE">Homepage: http://zdevs.ru</string>
    <string name="ABT_AUTHOR">© 2011–2024 Ant-ON, &lt;support@zdevs.ru></string>
    <string name="ABT_DONATE">Donate</string>
    <string name="ABT_DONATE_GENERAL">"You can help in various ways:
 1. Translate the program to another language or fix existing translations. Localization files: %1$s;
 2. Buy the Donate/Pro version;
 3. Share your ideas or report problems;
 4. Show your gratitude to the author by making a donation:"</string>
    <string name="ABT_DONATE_PAY">YooMoney: 41001641043147</string>
    <string name="ABT_OPEN_SOURCE">Open Source</string>
    <string name="ABT_OPEN_SOURCE_7ZIP">"&lt;7-Zip>
7-Zip is licensed under the GNU LGPL (version 2.1) and unRAR restriction.
Site:\u0009\u0009http://7-zip.org
License:\u0009http://7-zip.org/license.txt"</string>
    <string name="ABT_OPEN_SOURCE_AOSP">"&lt;AOSP>
Site:\u0009https://source.android.com
License:\u0009Apache 2.0"</string>
    <string name="ABT_OPEN_SOURCE_APKPARSER">"&lt;APK Parser Lib>
Site:\u0009https://github.com/hsiafan/apk-parser
License:\u0009BSD"</string>
    <string name="ABT_OPEN_SOURCE_BUSYBOX">"&lt;BusyBox>
Site:\u0009https://busybox.net
License:\u0009GNU GPL"</string>
    <string name="ABT_OPEN_SOURCE_FREEBSD">"&lt;FreeBSD>
Site:\u0009https://freebsd.org
License:\u0009BSD"</string>
    <string name="ABT_OPEN_SOURCE_FREELZMA2">"&lt;Fast LZMA2 Library>
Author:\u0009Conor McCarthy
License:\u0009BSD"</string>
    <string name="ABT_OPEN_SOURCE_ICONV">"&lt;libiconv>
License:\u0009GNU LGPL
Site:\u0009\u0009http://www.gnu.org/software/libiconv"</string>
    <string name="ABT_OPEN_SOURCE_ICON_1">"&lt;Human-O2 Icons>
Author:\u0009Oliver Scholtz (and others)
License:\u0009GNU LGPL"</string>
    <string name="ABT_OPEN_SOURCE_ICON_5">"&lt;Numix icon theme>
Author:\u0009Numix Project
License:\u0009GNU GPL
Site:\u0009\u0009http://numixproject.org"</string>
    <string name="ABT_OPEN_SOURCE_LZ4">"&lt;LZ4 Library>
Author:\u0009Yann Collet
License:\u0009BSD"</string>
    <string name="ABT_OPEN_SOURCE_R2D2">"&lt;r2d2>
Site:\u0009https://github.com/moldedbits/r2d2
License:\u0009Apache 2.0"</string>
    <string name="ABT_OPEN_SOURCE_SUBSAMPLING_IV">"&lt;Subsampling Scale Image View>
Site:\u0009https://github.com/davemorrissey/subsampling-scale-image-view
License:Apache 2.0"</string>
    <string name="ABT_OPEN_SOURCE_TOASTCOMPAT">"&lt;ToastCompat>
Site:\u0009https://github.com/PureWriter/ToastCompat
License:\u0009Apache 2.0"</string>
    <string name="ABT_OPEN_SOURCE_UNEGG">"&lt;UnEgg>
Site:\u0009\u0009http://www.estsoft.com
License:\u0009UnEgg license"</string>
    <string name="ABT_OPEN_SOURCE_UNRAR">"&lt;UnRAR>
Author:\u0009Alexander Roshal
Site:\u0009\u0009http://rarlab.com
License:\u0009UnRAR license"</string>
    <string name="ABT_OPEN_SOURCE_ZSTD">"&lt;ZSTD Library>
Author:\u0009Yann Collet
License:\u0009BSD"</string>
    <string name="ABT_PRIVACY_POLICY">Privacy policy</string>
    <string name="ABT_PRIVATE_POLICY_URL">http://zdevs.ru/za_privacy_policy.txt</string>
    <string name="ABT_TERM_OF_SERVICE">Terms of service</string>
    <string name="ABT_THANKS">Thanks</string>
    <string name="ABT_TRANSLATORS">"ajibayi（اجىباي） - Kirghiz (Arabic) localization
andrii - Перевод на Украинский (с 22.10.2017)
Axii - Lokalizacja Polska
cadixu - 繁中翻譯
Chanson Yu - 简体中文翻译
Dado Dehrimon - Translation into Croatian
Donatas Ikanevičius - Lietuviškas vertimas
Drake Strike - Translate to Vietnamese
ekberjan - Uighur localization
Fatih Fırıncı - Türkçe Çeviri (since 11.01.2018)
fprietog - Traducción al español
Hairo - Traducción al español
Hazem Hamdi - Arabic localization
Ivan Kalev - Bulgarian localization
Junbeom Seo - Translation into Korean
Kai Budell - Übersetzung ins Deutsche
Mariya Zhulyakova - Fix translations
Mehrab Poladov - Translation into Azerbaijan
MoskriETF - Prevod na srpski
Muhammad Bintang Proklamasi - Translation into Indonesia
Mustafa Bozkurt - Türkçe Çeviri
Netbew - Traduction Française
Nikolaj Schneider - German translation
Paulo Oliveira - Tradução Português (Brasil)
Petros Kyladitis - Για την Ελληνική γλώσσα
pyler - Slovenský preklad
Radosław Słowik - Lokalizacja Polska
Renek - Translation into Czech
Robin Kluth - Übersetzung ins Deutsche
Roni Andria - Bahasa Indonesia
Scott Chang - 繁中翻譯 (since 01.06.2017)
Saeid Rastegar - Persian localization
stigr - Перевод на Украинский
SVM - English localization
Taka - Japanese localization (since 01.01.2016)
Tasuku Tabuchi - Japanese localization
TJL73 - Traduzione italiana
umarhoj - Arabic localization
Vladislav Fox - help with everything, fresh ideas and translate
Wanderson XM7 - Tradução Português (Brasil) (since 13.11.2017)
Xia Bui - Translate to Vietnamese
Zafar Shamsiddinov - Translate to Uzbek
ZityiSoft - Magyar fordítás
Zorge.R - Useful ideas
Живко Жеков aka jekovcar - Bulgarian localization
吴天豪 - Simplified Chinese localization
刁海 - 中文简体翻译 (更新于 2014.12.30)"</string>
    <string name="ABT_TTL_ABOUT">About</string>
    <string name="ADDF_ENTER_FAVORITE_NAME">Enter bookmark name for %1:</string>
    <string name="ADDF_FAVORITE_ICON">Icon:</string>
    <string name="ADDF_TTL_ADD_FAVORITE">Add to favorites</string>
    <string name="ADD_ENCRYPT_FILES">Password-protect files</string>
    <string name="ADD_SELECTED_FILES">Selected files: %1</string>
    <string name="ADD_TTL_FILE">Add file</string>
    <string name="ADD_TTL_FOLDER">Add folder</string>
    <string name="BTN_ADD">Add</string>
    <string name="BTN_AGREE">Agree</string>
    <string name="BTN_CANCEL">Cancel</string>
    <string name="BTN_COPY">Copy</string>
    <string name="BTN_HIDE">Hide</string>
    <string name="BTN_NO">No</string>
    <string name="BTN_OK">OK</string>
    <string name="BTN_REPLACE">Replace</string>
    <string name="BTN_SKIP">Skip</string>
    <string name="BTN_USE_ALWAYS">Always</string>
    <string name="BTN_USE_ONCE">Just once</string>
    <string name="BTN_YES">Yes</string>
    <string name="CMP_DELETE_FILE">Delete source files after compression</string>
    <string name="CMP_ENCRYPT">Encryption:</string>
    <string name="CMP_ENCRYPT_AES128">Data (AES-128)</string>
    <string name="CMP_ENCRYPT_AES192">Data (AES-192)</string>
    <string name="CMP_ENCRYPT_AES256">Data (AES-256)</string>
    <string name="CMP_ENCRYPT_AES256_WITH_NAME">Data and filenames (AES-256)</string>
    <string name="CMP_ENCRYPT_ZIPCRYPT">Data (ZipCrypto)</string>
    <string name="CMP_ENTER_PASSWORD">Enter password</string>
    <string name="CMP_FORMAT">Archive format:</string>
    <string name="CMP_LEVEL">Compression level:</string>
    <string name="CMP_NAME">Archive:</string>
    <string name="CMP_PART_SIZE">Volume size:</string>
    <string name="CMP_PASSWORD">Password:</string>
    <string name="CMP_SEPARATE_ARCHIVE">Create separate archive</string>
    <string name="CMP_SPLIT">Split into volumes:</string>
    <string name="CMP_SPLIT_NO">No</string>
    <string name="CMP_SPLIT_OVER_SIZE">Other size…</string>
    <string name="CMP_TTL_COMPRESS">Create archive</string>
    <string name="CMT_ARCHIVE_COOMENT">Archive comment:</string>
    <string name="DNT_TRANSLATE_SERVICE_URL">https://crowdin.com/project/zarchiverfree</string>
    <string name="DNT_TRANSLATE_URL">https://yadi.sk/d/NTCnBMmK3SHmt2</string>
    <string name="FREE_LIMIT_HELP">For Donate/Pro version users only</string>
    <string name="MENU_ADD">Add</string>
    <string name="MENU_ADD_FILES">Add file</string>
    <string name="MENU_ADD_FOLDER">Add folder</string>
    <string name="MENU_CHARSET">Charset</string>
    <string name="MENU_COMMENT">Comment</string>
    <string name="MENU_EXIT">Exit</string>
    <string name="MENU_FONT">Font</string>
    <string name="MENU_FONT_SIZE">Font size</string>
    <string name="MENU_LINE_NUMBER">Line number</string>
    <string name="MENU_NEW">Create</string>
    <string name="MENU_NEW_ARCHIVE">New archive</string>
    <string name="MENU_NEW_FILE">New file</string>
    <string name="MENU_NEW_FOLDER">New folder</string>
    <string name="MENU_REMOUNT_RO">Remount to RO</string>
    <string name="MENU_REMOUNT_RW">Remount to RW</string>
    <string name="MENU_SAVE">Save</string>
    <string name="MENU_SEARCH">Search</string>
    <string name="MENU_SYNTAX">Syntax</string>
    <string name="MENU_VIEW_MODE">View</string>
    <string name="MENU_WORD_WRAP">Word wrap</string>
    <string name="OPT_APK_ICON">APK file icons</string>
    <string name="OPT_APK_ICON_SETUP">Show APK file icons</string>
    <string name="OPT_ARCHIVE_IMG_THUMB">Thumbnails in archives</string>
    <string name="OPT_ARHIVE_DIR">Store new archives in</string>
    <string name="OPT_AUDIO_THUMB">Album Art</string>
    <string name="OPT_AUDIO_THUMB_SETUP">Show album cover art of music files</string>
    <string name="OPT_BACK_BUTTON_ACTION">Back button action</string>
    <string name="OPT_COMPRESSION">Compression</string>
    <string name="OPT_CONFIRM_CANCEL">Abort confirmation</string>
    <string name="OPT_CONFIRM_CANCEL_SETUP">Ask for confirmation before aborting a running process</string>
    <string name="OPT_CONFIRM_REWRITE">Overwrite confirmation</string>
    <string name="OPT_CONFIRM_REWRITE_SETUP">Ask for confirmation before overwriting files</string>
    <string name="OPT_EXTERNAL_OPEN_ARCHIVE">External archive opening action</string>
    <string name="OPT_FILE_LAST_MOD">Show date</string>
    <string name="OPT_FILE_LAST_MOD_SETUP">Show file last modification date</string>
    <string name="OPT_FILE_LAST_MOD_TIME">Show time</string>
    <string name="OPT_FILE_LAST_MOD_TIME_SETUP">Show file last modification time</string>
    <string name="OPT_FILE_SIZE">Show size</string>
    <string name="OPT_FILE_SIZE_SETUP">Show file size</string>
    <string name="OPT_FILE_SORT">Sort files by</string>
    <string name="OPT_FILE_SORT_DESC">Sort order</string>
    <string name="OPT_FILE_SORT_DESC_SETUP">Sort in descending order</string>
    <string name="OPT_HIDE_FILE">Show hidden files</string>
    <string name="OPT_HIDE_FILE_SETUP">Show files and folders whose names start with \".\"</string>
    <string name="OPT_HOME_DIR">Home folder</string>
    <string name="OPT_IMG_THUMB">Thumbnails</string>
    <string name="OPT_IMG_THUMB_SETUP">Show image thumbnails</string>
    <string name="OPT_INTERECTIVE_PAST">Interactive paste</string>
    <string name="OPT_INTERECTIVE_PAST_SETUP">Use interactive paste mode</string>
    <string name="OPT_LIST_MODE">List mode</string>
    <string name="OPT_OPEN_ARCHIVE">Archive opening action</string>
    <string name="OPT_OPEN_FILE">File opening action</string>
    <string name="OPT_PDF_THUMB">PDF Thumbnails</string>
    <string name="OPT_PDF_THUMB_SETUP">Show thumbnails of PDF documents (may causes errors on some devices!)</string>
    <string name="OPT_REMOVE_AFTER_COMPRESS">Delete after compression</string>
    <string name="OPT_REMOVE_AFTER_COMPRESS_SETUP">Offer to delete source files after compression</string>
    <string name="OPT_SECTION_FM">File list</string>
    <string name="OPT_SECTION_GENERAL">General</string>
    <string name="OPT_SECTION_GUI">Interface</string>
    <string name="OPT_SECTION_PLUGINS">Plugins</string>
    <string name="OPT_SECTION_ROOT">ROOT</string>
    <string name="OPT_SQUARE_THUMB">Square thumbnails</string>
    <string name="OPT_UP_FOLDER_ITEM">Show \"..\"</string>
    <string name="OPT_UP_FOLDER_ITEM_SETUP">Click \"..\" to navigate up in the directory tree</string>
    <string name="OPT_USE_ARC_FOLDER">Use a folder to store archives</string>
    <string name="OPT_USE_ARC_FOLDER_SETUP">New archives will be created in the specified folder</string>
    <string name="OPT_VIDEO_THUMB">Video Thumbnails</string>
    <string name="OPT_VIDEO_THUMB_SETUP">Show thumbnails of video files</string>
    <string name="app_name">ZArchiver</string>
</resources>