<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:title="@string/OPT_SECTION_GENERAL" android:summary="" android:fragment="ru.zdevs.zarchiver.activity.SettingsDlg$SettingsFragment">
        <extra android:name="settings" android:value="general" />
    </header>
    <header android:title="@string/OPT_SECTION_GUI" android:summary="" android:fragment="ru.zdevs.zarchiver.activity.SettingsDlg$SettingsFragment">
        <extra android:name="settings" android:value="gui" />
    </header>
    <header android:title="@string/OPT_SECTION_FM" android:summary="" android:fragment="ru.zdevs.zarchiver.activity.SettingsDlg$SettingsFragment">
        <extra android:name="settings" android:value="fm" />
    </header>
    <header android:title="@string/OPT_COMPRESSION" android:summary="" android:fragment="ru.zdevs.zarchiver.activity.SettingsDlg$SettingsFragment">
        <extra android:name="settings" android:value="compression" />
    </header>
    <header android:title="@string/OPT_SECTION_ROOT" android:summary="" android:fragment="ru.zdevs.zarchiver.activity.SettingsDlg$SettingsFragment">
        <extra android:name="settings" android:value="root" />
    </header>
    <header android:title="@string/OPT_SECTION_PLUGINS" android:summary="" android:fragment="ru.zdevs.zarchiver.activity.SettingsDlg$PluginFragment" />
</preference-headers>