<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/svAbout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="4.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="4.0dip" android:paddingEnd="8.0dip">
        <LinearLayout android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:gravity="start|center" android:id="@id/tv_appname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:textAlignment="viewStart" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:gravity="start|center" android:id="@id/tv_version" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAlignment="viewStart" />
        </LinearLayout>
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_AUTHOR" android:textIsSelectable="true" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:autoLink="web" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_APP_WEBSITE" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?colorPrimary" android:autoLink="web" android:id="@id/tv_terms_of_service" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_TERM_OF_SERVICE" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?colorPrimary" android:autoLink="web" android:id="@id/tv_privacy_policy" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_PRIVACY_POLICY" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:gravity="start|center" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_DONATE" android:textAlignment="viewStart" />
        <View android:background="#ffcccccc" android:paddingLeft="5.0dip" android:paddingTop="50.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:autoLink="web" android:id="@id/tv_donate" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_DONATE_GENERAL" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_DONATE_PAY" android:textIsSelectable="true" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:gravity="start|center" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_THANKS" android:textAlignment="viewStart" />
        <View android:background="#ffcccccc" android:paddingLeft="5.0dip" android:paddingTop="50.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_TRANSLATORS" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:gravity="start|center" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE" android:textAlignment="viewStart" />
        <View android:background="#ffcccccc" android:paddingLeft="5.0dip" android:paddingTop="50.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_7ZIP" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_ICONV" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_UNRAR" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_LZ4" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_ZSTD" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_FREELZMA2" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_UNEGG" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_BUSYBOX" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_R2D2" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_FREEBSD" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_AOSP" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_TOASTCOMPAT" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_APKPARSER" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_SUBSAMPLING_IV" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_ICON_1" android:textAlignment="viewStart" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="start|center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ABT_OPEN_SOURCE_ICON_5" android:textAlignment="viewStart" />
    </LinearLayout>
</ScrollView>